login.html oluşturuldu ve index.html da değişiklikler yapıldı.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,11 +53,11 @@
 							<ul class="nav navbar-nav">
 								<li><a href=""><i class="fa fa-user"></i> Hesap</a></li>
 								<li><a href=""><i class="fa fa-star"></i> İstek Listesi</a></li>
-								<li><a href="checkout.html"><i class="fa fa-crosshairs"></i>
-										Çıkış Yapmak</a></li>
-								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i>
+								<li><a href="/checkout"><i class="fa fa-crosshairs"></i>
+										Ödeme</a></li>
+								<li><a href="/cart"><i class="fa fa-shopping-cart"></i>
 										Kart</a></li>
-								<li><a href="login.html"><i class="fa fa-lock"></i>
+								<li><a href="/login"><i class="fa fa-lock"></i>
 										Oturum Aç</a></li>
 							</ul>
 						</div>
@@ -1157,7 +1157,6 @@
 
 	<footer id="footer">
 		<!--Footer-->
-
 		<div class="footer-widget">
 			<div class="container">
 				<div class="row">
@@ -1204,7 +1203,7 @@
 								<li><a href="#">Şirket Bilgisi</a></li>
 								<li><a href="#">Kariyerler</a></li>
 								<li><a href="#">Mağaza Konumu</a></li>
-								<li><a href="#">Affillate Programı</a></li>
+								<li><a href="#">Ortaklık Programı</a></li>
 								<li><a href="#">Telif hakkı</a></li>
 							</ul>
 						</div>
@@ -1218,7 +1217,7 @@
 									<i class="fa fa-arrow-circle-o-right"></i>
 								</button>
 								<p>
-									Sitesinden en son güncellemeleri alın <br />sitemiz ve
+									Sitemizden en son güncellemeleri alın <br />sitemiz ve
 									kendinizi güncelleyin ..
 								</p>
 							</form>
